exercise 1 fix vertical stretch

--- a/styles.css
+++ b/styles.css
@@ -20,17 +20,16 @@
 }
 .part1{
     background-color: #fff7bd;
-    height: 130px;
+    height: 33.3%;
 }
 .part2{
     background-color: #ffed69;
-    height: 130px;
+    height: 33.3%;
 
 }
 .part3{
     background-color: #ffe41f;
-    height: 130px;
-
+    height: 33.3%;
 }
 
 .exercise2{
